<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_curso"
            android:icon="@drawable/ic_menu_curso"
            android:title="@string/menu_cursos" />
        <item
            android:id="@+id/nav_comunicados"
            android:icon="@drawable/ic_menu_comunicados"
            android:title="@string/menu_comunicados" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/menu_sobre" />
    </group>

    <item android:title="@string/menu_opcoes">
        <menu>
            <item
                android:id="@+id/nav_compartilhar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_compartilhar" />
        </menu>
    </item>

</menu>
